<resources>
    <string name="everywhere_pleasefillbox">Please Fill Box</string>
    <string name="everywhere_permissionallowed">Permission Allowed</string>
    <string name="everywhere_permissiondenied">Permission Denied</string>
    <string name="everywhere_dollarsymbol">$</string>
    <string name="everywhere_imagesaved">Image Saved</string>
    <string name="everywhere_connectionerror">Connection Error</string>
    <string name="everywhere_value">VALUE</string>
    <string name="everywhere_save">Save</string>
    <string name="everywhere_skip">Skip</string>
    <string name="everywhere_image">Image</string>
    <string name="phoneinput_header">Please choose your country and select your phone number</string>
    <string name="phoneinput_hintcodecountry">Code</string>
    <string name="phoneconfirmation_menudone">Done</string>
    <string name="phoneconfirmation_toolbartitle">Phone confirmation</string>
    <string name="phoneconfirmation_phonenumber">"912 222 22 22"</string>
    <string name="phoneconfirmation_entertheverificationhere">"Verification code "</string>
    <string name="phoneconfirmation_timer">"(02:00)"</string>
    <string name="phoneconfirmation_changenumber">"Change Number"</string>
    <string name="phoneconfirmation_resend">Resend</string>
    <string name="phoneconfirmation_sentcodeagain">Sent code again</string>
    <string name="phoneconfirmation_invalidactivationcode">Invalid activation code</string>
    <string name="phoneconfirmation_invalidudidorphone">Invalid udid or phone</string>
    <string name="phoneconfirmation_invaliddevicename">Invalid device name</string>
    <string name="verification_pleaseenterverificationcodehere">Please enter verification code here</string>
    <string name="registration_menudone">Done</string>
    <string name="registration_toolbartitle">Your phone</string>
    <string name="registration_defultcountry">Select your country</string>
    <string name="registration_pleasepickcountry">Please pick a country</string>
    <string name="registration_pleasefillyournumber">Please fill your number</string>
    <string name="registration_phonehint">Phone number</string>
    <string name="phoneconfirmation_Pleasefillbox">Please fill box</string>
    <string name="athenticationdefinition_password">Password</string>
    <string name="authenticationdefinition_pattern">Pattern</string>
    <string name="authenticationdefinition_notmatch">Not match</string>
    <string name="authenticationdefinition_connectfordots">Connect at least four dots</string>
    <string name="authenticationdefinition_tryforsecondtime">Try for second time</string>
    <string name="authenticationdefinition_setsuccessful">Set successful</string>
    <string name="authenticationdefinition_pleasefilloutboxabove">Please fill out box above</string>
    <string name="authenticationdefinition_hintpassword">Password</string>
    <string name="authenticationdefinition_hintconfirmpassword">Confirm password</string>
    <string name="authenticationdefinition_toolbartitle">Login method</string>
    <string name="authenticationdefinition_minimumlength">At least 8 characters</string>
    <string name="authenticationdefinition_digit">At least one digit</string>
    <string name="authenticationdefinition_capitalletter">At least on capital letter</string>
    <string name="authenticationdefinition_specialchar">At least one of (@  #  $  %  +  =  *  ?)</string>
    <string name="authenticationdefinition_helpertext">8-20 characters, at least one capital letter, at least one number, and no spaces</string>
    <string name="recoveryemail_skip">Skip</string>
    <string name="recoveryemail_thisemaildoesnotexist">Insert correct email</string>
    <string name="recoveryemail_enteremailaddress">Email address</string>
    <string name="recoveryemail_toolbartitle">Recovery email</string>
    <string name="recoveryemail_invalidemail">Invalid email</string>
    <string name="recoveryemail_emailalreadyexists"> Email already exists</string>
    <string name="recoveryemail_pleaseenteryouremailaddress">Please enter your email address</string>
    <string name="recoveryemail_menudone">Done</string>
    <string name="navigation_dashboard">Dashboard</string>
    <string name="navigation_charge">Load</string>
    <string name="navigation_requesttoreceive">Request to receive</string>
    <string name="navigation_walletaddress">Wallet address</string>
    <string name="navigation_transactionhistory">Transaction history</string>
    <string name="navigation_chart">Chart</string>
    <string name="navigation_setting">Setting</string>
    <string name="navigation_support">Support</string>
    <string name="navigation_aboutus">About Us</string>
    <string name="navigation_wallets">Wallets</string>
    <string name="navigation_contacts">Contacts</string>
    <string name="dashboard_invalidcurrency">Invalid currency</string>
    <string name="dashboard_ratedosenotexists">Rate dose not exists</string>
    <string name="dashboard_equivalenttobasecurrency">Equivalent to base currency</string>
    <string name="dashboard_notification">Notification</string>
    <string name="dashboard_sorryicantcalculatenow">I cant calculate now</string>
    <string name="dashboard_basecurrencydoesnotset">Base currency does not set</string>
    <string name="dashboard_forruninitlistener">123</string>
    <string name="materialdialogutil_isloading">Is loading ...</string>
    <string name="materialdialogutil_pleasewait">Please wait</string>
    <string name="load_invalidamount">Invalid amount</string>
    <string name="load_amountissmallerthanlowerbound">Amount is smaller than lower bound</string>
    <string name="load_amountisgreaterthanupperbound">Amount is greater than upper bound</string>
    <string name="load_invalidwalletid">Invalid wallet id</string>
    <string name="load_paymentgateway">Payment gateway</string>
    <string name="load_invalidcurrency">Invalid currency</string>
    <string name="load_ratedosenotexists">Rate dose not exists</string>
    <string name="load_chargeisunavailable">Charge is unavailable</string>
    <string name="load_verifyrateisoutdatedorithaswrongcurrency">Verify rate is outdated or it has wrong currency</string>
    <string name="load_VerifyRateIdMissing">Verify rate id missing</string>
    <string name="load_invalidverifyrateid">Invalid verify rate id</string>
    <string name="load_startatransferasananonymous">Start a transfer as an anonymous</string>
    <string name="loadconfirmation_chargeconfirmation">Load confirmation</string>
    <string name="loadconfirmation_walletname">Wallet Name </string>
    <string name="loadconfirmation_paymentgateway">Payment Gateway </string>
    <string name="loadconfirmation_walletamount">Charge Amount  </string>
    <string name="loadconfirmation_baseamount">Paid Amount  </string>
    <string name="loadconfirmation_confirm">CONFIRM</string>
    <string name="loadconfirmation_cannotfinalizefailedtransaction">Cannot finalize failed transaction</string>
    <string name="loadconfirmation_transactionnotfound">Transaction not found</string>
    <string name="loadconfirmation_invalidtransactionid">Invalid transaction id</string>
    <string name="loadconfirmation_finalizetransferasananonymous">Finalize transfer as an anonymous</string>
    <string name="loadconfirmation_braintreenonceismissing">Braintree nonce is missing</string>
    <string name="loadconfirmation_pleasetryagain">Please try again</string>
    <string name="loadconfirmation_paymentiscanceled">Payment is canceled</string>
    <string name="loadcompleted_chargecompleted">Load status</string>
    <string name="loadcompleted_walletname">Wallet name </string>
    <string name="loadcompleted_amount">Load amount  </string>
    <string name="loadcompleted_baseamount">Paid amount  </string>
    <string name="loadcompleted_paymentgateway">Payment gateway </string>
    <string name="loadcompleted_transactiondate">Transaction date </string>
    <string name="loadcompleted_transactiontime">Transaction time </string>
    <string name="loadcompleted_transactionid">Transaction ID </string>
    <string name="loadcompleted_trackingcode">RRN </string>
    <string name="loadcompleted_dashboard">DASHBOARD</string>
    <string name="loadcompleted_success">Success</string>
    <string name="loadcompleted_sharemenutoolbar">Share</string>
    <string name="loadcompleted_downloadmenutoolbar">Download</string>
    <string name="laodfailed_failed">Load status</string>
    <string name="loadfailed_failedtextview">Failed</string>
    <string name="loadfailed_walletname">Wallet Name </string>
    <string name="loadfailed_walletamount">Charge Amount </string>
    <string name="loadfailed_baseamount">Paid Amount </string>
    <string name="loadfailed_paymentgateway">Payment Gateway </string>
    <string name="loadfailed_transactiondate">Transaction date </string>
    <string name="loadfailed_transactiontime">Transaction time </string>
    <string name="loadfailed_rrn">RRN </string>
    <string name="loadfailed_dashboard">Dashboard</string>
    <string name="loadfailed_imagesaved">Image Saved</string>
    <string name="withdraw_toolbar">Withdraw</string>
    <string name="withdraw_nextamount">NEXT-AMOUNT</string>
    <string name="withdraw_balance">"Balance : "</string>
    <string name="everywhere_walletlable">Wallet</string>
    <string name="withdraw_qrcode">QR code</string>
    <string name="withdraw_withdrawmethod">Withdraw method</string>
    <string name="withdrawamount_toolbar">Withdraw-Amount</string>
    <string name="withdrawamount_amount">Amount</string>
    <string name="withdrawamount_alpha">Alpha</string>
    <string name="withdrawamount_usd">USD</string>
    <string name="withdrawamount_usemaximum">Use maximum</string>
    <string name="withdrawamount_useminimum">Use minimum</string>
    <string name="withdrawamount_transferlimit">2500α daily transfer limit</string>
    <string name="withdrawamount_fillalphaamount">Fill alpha amount</string>
    <string name="chargefailed_sharemenutoolbar">Share</string>
    <string name="chargefailed_downloadmenutoolbar">Download</string>
    <string name="qrcodecompleted_toolbar">QR Code Completed</string>
    <string name="qrcodecompleted_success">Success</string>
    <string name="qrcodecompleted_scanyourqrcode">Scan QR code</string>
    <string name="qrcodecompleted_imagesaved">Image saved</string>
    <string name="qrcodefailed_toolbar">QR Code Failed</string>
    <string name="qrcodefailed_failed">Failed</string>
    <string name="qrcodefailed_trywithdrawbutton">TRY WITHDRAW</string>
    <string name="qrcodefailed_dashboardbutton">DASHBOARD</string>
    <string name="transactionhistory_toolbar">Transaction History</string>
    <string name="rowtransactionhistory_walletname">Wallet Name :</string>
    <string name="transactionfilters_toolbar">Transaction Filters</string>
    <string-array name="transactionfilter_date">
        <item>Always</item>
        <item>Last day</item>
        <item>Last week</item>
        <item>Last month</item>
        <item>Custom</item>
    </string-array>
    <string name="transactionhistoryfilters_selecttimespan">Select a timespan</string>
    <string name="transfercompleted_toolbar">Send completed</string>
    <string name="transfercompleted_paidamount">Transfer amount  </string>
    <string name="transfercompleted_baseamount">Paid amount  </string>
    <string name="transfer_nextamount">NEXT-AMOUNT</string>
    <string name="transfer_wallet">Wallet</string>
    <string name="transfer_balance">"Balance : "</string>
    <string name="transferamount_amount">Amount</string>
    <string name="transferamount_amounthint">Alpha</string>
    <string name="transferamount_dollar">USD</string>
    <string name="transferamount_nexttransfer">NEXT - TRANSFER</string>
    <string name="transferamount_usemaximum">USE MAXIMUM</string>
    <string name="transferamount_useminimum">USE MINIMUM</string>
</resources>