<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_authenticationdefinition_enterpasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/marginend_authenticationdefinition_textinputlayout"
        android:layout_marginStart="@dimen/marginstart_authenticationdefinition_textinputlayout"
        android:layout_marginTop="@dimen/margintop_authenticationdefinitionpasswordtab_entercode"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorSecondaryDark">

        <EditText
            android:id="@+id/edittext_authentication_entercode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/authenticationdefinition_hintpassword"
            android:inputType="textPassword"
            android:textSize="@dimen/textsize_authenticationdefinitionpasswordtab_entercode"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/textinputlayout_authenticationdefinition_enterpasscode"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_authenticationdefinition_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authenticationdefinition_minimumlength"
                android:textColor="@color/colorRed"/>

            <TextView
                android:id="@+id/textView_authenticationdefinition_capital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authenticationdefinition_capitalletter"
                android:textColor="@color/colorRed"/>

            <TextView
                android:id="@+id/textView_authenticationdefinition_digit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authenticationdefinition_digit"
                android:textColor="@color/colorRed"/>

            <TextView
                android:id="@+id/textView_authenticationdefinition_special"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authenticationdefinition_specialchar"
                android:textColor="@color/colorRed"/>

        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_authenticationdefinition_confirmpasscode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinputlayout_authenticationdefinition_enterpasscode"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/marginend_authentication_textinputlayout"
        android:layout_marginStart="@dimen/marginstart_authentication_textinputlayout"
        android:layout_marginTop="@dimen/margintop_authenticationdefinitionpasswordtab_confirmcode"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorSecondaryDark">

        <EditText
            android:id="@+id/edittext_authenticationdefinition_confirmcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/authenticationdefinition_hintconfirmpassword"
            android:inputType="textPassword"
            android:textSize="@dimen/textsize_authenticationdefinitionpasswordtab_confirmcode"/>

    </android.support.design.widget.TextInputLayout>

</RelativeLayout>