<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearlayout_transferamount_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margintop_transferamount_linearlayout"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_transferamount_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transferamount_amount"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textsize_transferamount_amount" />

        <android.support.design.widget.TextInputLayout

            android:id="@+id/textinputlayout_transferamount_alpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_transferamount_amountwallet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginstartend_transferamount_edittextamount"
                android:layout_marginStart="@dimen/marginstartend_transferamount_edittextamount"
                android:hint="@string/transferamount_amounthint"
                android:inputType="numberDecimal"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageview_transferamount_transfer"
            android:layout_width="@dimen/width_transferamount_transfer"
            android:layout_height="@dimen/height_transferamount_transfer"
            android:layout_marginTop="@dimen/margintop_transferamount_transfer"
            android:src="@drawable/chargeamounttransferamount_transfer" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/texinputlayout_transferamount_dollar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edittext_transferamount_amountbase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginstartend_transferamount_edittextdollar"
                android:layout_marginStart="@dimen/marginstartend_transferamount_edittextdollar"
                android:layout_marginTop="@dimen/margintop_transferamount_amountbase"
                android:hint="@string/transferamount_dollar"
                android:inputType="numberDecimal"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/relativelayout_transferamount_middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_transferamount_middlerelativelayout"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textview_transferamount_usemaximum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginstartend_transferamount_useminimumusemaximum"
                android:text="@string/transferamount_usemaximum"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="@dimen/textsize_transferamount_useminimumusemaximumtransferfee" />

            <TextView
                android:id="@+id/textview_transferamount_useminimum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginstartend_transferamount_useminimumusemaximum"
                android:text="@string/transferamount_useminimum"
                android:textColor="@color/colorSecondaryDark"
                android:textSize="@dimen/textsize_transferamount_useminimumusemaximumtransferfee" />


        </RelativeLayout>

        <TextView
            android:id="@+id/textview_transferamount_transferfee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop_transferamount_transferfeetextview"
            android:gravity="center"
            android:text="Transfer fee α20($30)"
            android:textColor="@color/punch"
            android:textSize="@dimen/textsize_transferamount_useminimumusemaximumtransferfee" />

    </LinearLayout>

    <Button
        android:id="@+id/button_transferamount_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginbottom_transferamount_nextpayment"
        android:layout_marginEnd="@dimen/marginstartend_transferamount_nextpayment"
        android:layout_marginStart="@dimen/marginstartend_transferamount_nextpayment"
        android:background="@color/colorSecondary"
        android:text="@string/transferamount_nexttransfer"
        android:textColor="@color/colorBlack" />

</RelativeLayout>